# caprae_capital_subm

./: README.md  vercel.json
backend/: db.py  db.sqlite  main.py  pyproject.toml  schemas.py
frontend/: package-lock.json  package.json
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: ActivityLog.tsx  AddLeadDialog.tsx  EmailSequenceBuilder.tsx  LeadCard.tsx  LeadTable.tsx  Navbar.tsx  SequenceCard.tsx  StatsCard.tsx  StatusBadge.tsx  UsernamePromptDialog.tsx
frontend/client/src/components/examples/: ActivityLog.tsx  AddLeadDialog.tsx  EmailSequenceBuilder.tsx  LeadCard.tsx  LeadTable.tsx  Navbar.tsx  SequenceCard.tsx  StatsCard.tsx  StatusBadge.tsx  ThemeToggle.tsx  UsernamePromptDialog.tsx
frontend/client/src/pages/: Dashboard.tsx  Sequences.tsx
