[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
